k8s/base/security/clearglass.yaml
#
# Copyright (c) 2026 Metaform Systems, Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License, Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#
# Contributors:
#      Metaform Systems, Inc. - initial API and implementation
#

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clearglass
  namespace: edc-v
  labels:
    app: clearglass
    platform: edcv
    type: edcv-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clearglass
  template:
    metadata:
      labels:
        app: clearglass
        platform: edcv
        type: edcv-infra
    spec:
      containers:
        - name: clearglass
          image: ghcr.io/eclipse-cfm/clearglass:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: clearglass
  namespace: edc-v
  labels:
    tier: infrastructure
spec:
  selector:
    app: clearglass
  ports:
    - port: 8080
      targetPort: 8080
      name: http
